unpackaged/main/default/objects/Survey_Form__c/Survey_Form__c.object-meta.xml
<CustomObject>
    <description>A Custom Object created for Engineer Satisfaction level monitoring. The data comes from a modal pop-up on Engineer Community Portal once a month for every Active SR with &quot;Engineer Partner Community&quot; profile (excludes new Starters, up to 30 days). &quot;Satisfied&quot; = 100 points, &quot;Neutral&quot; = 50 points and &quot;Dissatisfied&quot; = 0 points.</description>
    <label>Survey Form</label>
    <nameField>
        <displayFormat>SUFM-{0000}</displayFormat>
        <label>Survey Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>