unpackaged/main/default/objects/Survey_Form__c/fields/Access_to_Records_Community_Portal__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Records_Community_Portal__c</fullName>
    <label>Access to Records/Community Portal</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>