unpackaged/main/default/objects/Survey_Form__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <formula>Service_Resource__r.Email__c</formula>
    <label>Applicant Email</label>
    <type>Text</type>
</CustomField>