unpackaged/main/default/objects/Survey_Form__c/fields/Crystal_Tax_Umbrella_Company__c.field-meta.xml
<CustomField>
    <fullName>Crystal_Tax_Umbrella_Company__c</fullName>
    <label>Crystal Tax/Umbrella Company</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>