unpackaged/main/default/objects/Survey_Form__c/fields/Ease_of_Field_Service_App__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Field_Service_App__c</fullName>
    <label>Ease of Field Service App</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>