unpackaged/main/default/objects/Survey_Form__c/fields/Engineer_Name__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Name__c</fullName>
    <formula>Service_Resource__r.Name</formula>
    <label>Engineer Name</label>
    <type>Text</type>
</CustomField>