unpackaged/main/default/objects/Survey_Form__c/fields/Office_Admin_Support__c.field-meta.xml
<CustomField>
    <fullName>Office_Admin_Support__c</fullName>
    <label>Office/Admin Support</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>