unpackaged/main/default/objects/Survey_Form__c/fields/Overall_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Overall_Earnings__c</fullName>
    <label>Overall Earnings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>