unpackaged/main/default/objects/Survey_Form__c/fields/Plant_Hire__c.field-meta.xml
<CustomField>
    <fullName>Plant_Hire__c</fullName>
    <label>Plant Hire</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>