unpackaged/main/default/objects/Survey_Form__c/fields/Quality_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Leads__c</fullName>
    <label>Quality of Leads</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>