unpackaged/main/default/objects/Survey_Form__c/fields/Quantity_Volume_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Volume_of_Leads__c</fullName>
    <label>Quantity/Volume of Leads</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>