unpackaged/main/default/objects/Survey_Form__c/fields/Rates_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Rates_of_Pay__c</fullName>
    <label>Rates of Pay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>