unpackaged/main/default/objects/Survey_Form__c/fields/Section_1_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Section_1_Logistics__c</fullName>
    <formula>(Vehicle__c + Uniform__c + Plant_Hire__c + Shift_Patterns__c + Rates_of_Pay__c + Ease_of_Field_Service_App__c)/6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section 1 - Logistics</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>