unpackaged/main/default/objects/Survey_Form__c/fields/Section_2_Working_With_Us__c.field-meta.xml
<CustomField>
    <fullName>Section_2_Working_With_Us__c</fullName>
    <formula>(Quality_of_Leads__c + Quantity_Volume_of_Leads__c + Travel_Time_Distance__c +  Overall_Earnings__c + Office_Admin_Support__c + Technical_Manager_Support__c)/6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section 2 - Working With Us</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>