unpackaged/main/default/objects/Survey_Form__c/fields/Section_3_Additional__c.field-meta.xml
<CustomField>
    <fullName>Section_3_Additional__c</fullName>
    <formula>(Access_to_Records_Community_Portal__c + Crystal_Tax_Umbrella_Company__c + Work_Life_Balance__c + Working_for_Aspect__c)/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section 3 - Additional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>