unpackaged/main/default/objects/Survey_Form__c/fields/Shift_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Shift_Patterns__c</fullName>
    <label>Shift Patterns</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>