unpackaged/main/default/objects/Survey_Form__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>