unpackaged/main/default/objects/Survey_Form__c/fields/Technical_Manager_Support__c.field-meta.xml
<CustomField>
    <fullName>Technical_Manager_Support__c</fullName>
    <label>Technical Manager Support</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>