unpackaged/main/default/objects/Survey_Form__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>(Vehicle__c + Uniform__c + Plant_Hire__c + Shift_Patterns__c + Rates_of_Pay__c + Ease_of_Field_Service_App__c + Quality_of_Leads__c + Quantity_Volume_of_Leads__c + Travel_Time_Distance__c + Overall_Earnings__c + Office_Admin_Support__c + Technical_Manager_Support__c + Access_to_Records_Community_Portal__c + Crystal_Tax_Umbrella_Company__c + Work_Life_Balance__c + Working_for_Aspect__c)/16</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>