unpackaged/main/default/objects/Survey_Form__c/fields/Travel_Time_Distance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Distance__c</fullName>
    <label>Travel Time/Distance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>