unpackaged/main/default/objects/Survey_Form__c/fields/Uniform__c.field-meta.xml
<CustomField>
    <fullName>Uniform__c</fullName>
    <label>Uniform</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>