unpackaged/main/default/objects/Survey_Form__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>