unpackaged/main/default/objects/Survey_Form__c/fields/Work_Life_Balance__c.field-meta.xml
<CustomField>
    <fullName>Work_Life_Balance__c</fullName>
    <label>Work/Life Balance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>