unpackaged/main/default/objects/Survey_Form__c/fields/Working_for_Aspect__c.field-meta.xml
<CustomField>
    <fullName>Working_for_Aspect__c</fullName>
    <label>Working for Aspect</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>