unpackaged/main/default/objects/Survey_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engineer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submission_Date__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Section_1_Logistics__c</columns>
    <columns>Section_2_Working_With_Us__c</columns>
    <columns>Section_3_Additional__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>